<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="ST_MobileRobotObjectLD" Id="{ba534ec9-a955-4bf4-af83-c019dff5ddb3}">
    <Declaration><![CDATA[TYPE ST_MobileRobotObjectLD :
STRUCT
	//'Status: Robot joystick driving StateOfCharge: 52.2 Location: 2867572 -89647 48 Temperature: 36$R$N'
	sStatus			: STRING;
	fBattery		: REAL;
	fPositionX  	: REAL;
	fPositionY 		: REAL;
	fRotationTheta 	: REAL; 
	nTemperature 	: INT;
	
	bBusyLD 	: BOOL; //true if running
	bErrorLD	: BOOL; //true if error
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>